Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4322

HA sporadic failure in ha_tests

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.18
    • None
    • C++ Clustering
    • None

    Description

      To reproduce run this in a loop: ha_tests.py-DDURATION=3

      Fails about 8% of the time with:

      ha_tests.LongTests.test_failover_send_receive ....................................... start
        Traceback (most recent call last):
          File "/home/aconway/qpidrel/qpid/cpp/src/tests/ha_tests.py", line 930, in test_failover_send_receive
            map(wait_passed, receivers, checkpoint)
          File "/home/aconway/qpidrel/qpid/cpp/src/tests/ha_tests.py", line 898, in wait_passed
            assert retry(check), "Stalled %s at %s"%(r.queue, n)
          File "/home/aconway/qpidrel/qpid/cpp/src/tests/brokertest.py", line 86, in retry
            ret = function()
          File "/home/aconway/qpidrel/qpid/cpp/src/tests/ha_tests.py", line 896, in check
            r.check()       # Verify no exceptions
          File "/home/aconway/qpidrel/qpid/cpp/src/tests/brokertest.py", line 672, in check
            if self.error: raise self.error
        RethrownException: qpid-receive-19
        Traceback (most recent call last):
          File "/home/aconway/qpidrel/qpid/cpp/src/tests/brokertest.py", line 661, in run
            assert m <= self.received, "%s missing message %s>%s"%(self.queue, m, self.received)
        AssertionError: test6 missing message 51645>51525
        
      ha_tests.LongTests.test_failover_send_receive ....................................... fail
      

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: