QPID-4322: HA sporadic failure in ha_tests

Added Queue::getRange to get range atomically, fixes races around getting
the front and backup of the range as two separate operations.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1387785 13f79535-47bb-0310-9956-ffa450edef68